--- a/package.json
+++ b/package.json
@@ -116,5 +116,8 @@
         "prettier": "^3.5.3",
         "prettier-plugin-curly": "^0.3.1",
         "zx": "^8.4.1"
+    },
+    "dependencies": {
+        "genaiscript": "^1.124.3"
     }
 }
