--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -81,7 +81,8 @@
     "turndown": "^7.2.0",
     "turndown-plugin-gfm": "^1.0.2",
     "typescript": "5.8.2",
-    "vectra": "^0.9.0",
+    "vectra": "^0.1.2",
+    "webfont": "^6.0.2",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.5"
@@ -104,7 +105,7 @@
     "node": ">=20.0.0"
   },
   "peerDependencies": {
-    "promptfoo": "0.107.1"
+    "promptfoo": "^0.110.0"
   },
   "devDependencies": {
     "@types/diff": "^6.0.0",
