--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -100,7 +100,7 @@
     "ts-dedent": "^2.2.0",
     "tsx": "^4.19.3",
     "typescript": "5.8.2",
-    "vectra": "^0.9.0",
+    "vectra": "^0.1.2",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "yaml": "^2.7.0"
   },
@@ -116,6 +116,7 @@
     "@types/turndown": "^5.0.5",
     "pyodide": "^0.27.4",
     "turndown": "^7.2.0",
-    "turndown-plugin-gfm": "^1.0.2"
+    "turndown-plugin-gfm": "^1.0.2",
+    "webfont": "^6.0.2"
   }
 }
